// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi acp --help 1`] = `
"yukioshi acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on (0 tries 4096, then any free port)      [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: yukioshi.local)
                                                                [string] [default: "yukioshi.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi mcp --help 1`] = `
"yukioshi mcp

manage MCP (Model Context Protocol) servers

Commands:
  yukioshi mcp add [name]     add an MCP server
  yukioshi mcp list           list MCP servers and their status                        [aliases: ls]
  yukioshi mcp auth [name]    authenticate with an OAuth-enabled MCP server
  yukioshi mcp logout [name]  remove OAuth credentials for an MCP server
  yukioshi mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi attach --help 1`] = `
"yukioshi attach <url>

attach to a running yukioshi server

Positionals:
  url  address of a running server, for example http://localhost:4096 (start one with \`yukioshi
       serve\`)                                                                   [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to YUKIOSHI_SERVER_PASSWORD)            [string]
  -u, --username      basic auth username (defaults to YUKIOSHI_SERVER_USERNAME or 'yukioshi')
                                                                                            [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi run --help 1`] = `
"yukioshi run [message..]

run yukioshi with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help           show help                                                           [boolean]
  -v, --version        show version number                                                 [boolean]
      --print-logs     print logs to stderr                                                [boolean]
      --log-level      log level                [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure           run without external plugins                                        [boolean]
      --command        the command to run, use message for args                             [string]
  -c, --continue       continue the last session                                           [boolean]
  -s, --session        session id to continue                                               [string]
      --fork           fork the session before continuing (requires --continue or --session)
                                                                                           [boolean]
      --share          share the session                                                   [boolean]
  -m, --model          model to use in the format of provider/model                         [string]
      --agent          mode or agent: build, plan, goal, reasoning, research, auto, or a custom
                       agent                                                                [string]
      --format         format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file           file(s) to attach to message                                          [array]
      --title          title for the session (uses truncated prompt if no value provided)   [string]
      --attach         attach to a running yukioshi server (e.g., http://localhost:4096)    [string]
  -p, --password       basic auth password (defaults to YUKIOSHI_SERVER_PASSWORD)           [string]
  -u, --username       basic auth username (defaults to YUKIOSHI_SERVER_USERNAME or 'yukioshi')
                                                                                            [string]
      --dir            directory to run in, path on remote server if attaching              [string]
      --worktree       run in a git worktree of this project with this name (created if needed)
                                                                                            [string]
      --port           port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant        model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking       show thinking blocks                                                [boolean]
  -i, --interactive    run in direct interactive split-footer mode        [boolean] [default: false]
      --verify         run full project verification on changed files (off by default)
                                                                          [boolean] [default: false]
      --skip-verify    skip verification checks after turn completion                      [boolean]
      --summary        print the files changed after the turn (--no-summary to turn off)
                                                                           [boolean] [default: true]
      --output-schema  JSON Schema (a file, or inline JSON) the final answer must match; the answer
                       is printed as JSON                                                   [string]
      --max-turns      stop after this many model turns (exit code 5)                       [number]
      --max-cost       stop once this run has cost this many dollars (exit code 6)          [number]
      --auto           auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
      --mode           permission mode for this session: manual asks for anything not explicitly
                       configured, auto auto-approves low-risk actions (reads/searches), auto-all
                       auto-approves anything not explicitly denied or hard-blocked, plan restricts
                       the agent to low-risk actions only, review has a small model approve or
                       refuse each action that is not low-risk
                                  [string] [choices: "manual", "auto", "auto-all", "plan", "review"]

Examples:
  yukioshi run "explain what this repo does"          send one message and print the answer
  yukioshi run -c "now add tests"                     continue the last session
  yukioshi run -m anthropic/claude-sonnet-4-5 "fix    pick the model for this run
  the failing test"
  git diff | yukioshi run "review this change"        pipe text in as extra context"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi debug --help 1`] = `
"yukioshi debug

debugging and troubleshooting tools

Commands:
  yukioshi debug config        show resolved configuration
  yukioshi debug lsp           LSP debugging utilities
  yukioshi debug rg            ripgrep debugging utilities
  yukioshi debug file          file system debugging utilities
  yukioshi debug scrap         list all known projects
  yukioshi debug skill         list all available skills
  yukioshi debug snapshot      snapshot debugging utilities
  yukioshi debug startup       print startup timing
  yukioshi debug agent <name>  show agent configuration details
  yukioshi debug v2            debug v2 catalog and built-in plugins
  yukioshi debug info          show debug information
  yukioshi debug paths         show global paths (data, config, cache, state)
  yukioshi debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi providers --help 1`] = `
"yukioshi providers

manage AI providers and credentials

Commands:
  yukioshi providers list               list providers and credentials                 [aliases: ls]
  yukioshi providers login [url]        log in to a provider
  yukioshi providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi agent --help 1`] = `
"yukioshi agent

manage agents

Commands:
  yukioshi agent create  create a new agent
  yukioshi agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi upgrade --help 1`] = `
"yukioshi upgrade [target]

upgrade yukioshi to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi uninstall --help 1`] = `
"yukioshi uninstall

uninstall yukioshi and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi serve --help 1`] = `
"yukioshi serve

starts a headless yukioshi server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on (0 tries 4096, then any free port)      [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: yukioshi.local)
                                                                [string] [default: "yukioshi.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]

Examples:
  yukioshi serve --port 4096                          serve on a fixed port; then \`yukioshi attach
                                                      http://localhost:4096\`
  YUKIOSHI_SERVER_PASSWORD=secret yukioshi serve      reachable from other machines, password
  --hostname 0.0.0.0                                  protected"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi models --help 1`] = `
"yukioshi models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi stats --help 1`] = `
"yukioshi stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi export --help 1`] = `
"yukioshi export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export (leave out to pick one in a terminal; \`yukioshi session list\`
             shows the ids)                                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]

Examples:
  yukioshi export ses_abc123 > session.json  save a session to a file you can import later"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi import --help 1`] = `
"yukioshi import [file]

import a session: an exported JSON file, a share URL, or a Claude Code or Codex conversation
(.jsonl)

Positionals:
  file  exported JSON file, share URL, or Claude Code or Codex .jsonl transcript            [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --from        import the newest Claude Code or Codex conversation held in this folder
                                                               [string] [choices: "claude", "codex"]

Examples:
  yukioshi import session.json   restore a session made by \`yukioshi export\`
  yukioshi import --from claude  continue the newest Claude Code conversation held in this folder"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi pr --help 1`] = `
"yukioshi pr <number>

fetch and checkout a GitHub PR branch, then run yukioshi

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi session --help 1`] = `
"yukioshi session

manage sessions

Commands:
  yukioshi session list                list sessions
  yukioshi session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi plugin --help 1`] = `
"yukioshi plugin [action] [target] [extra]

install, list, or remove plugins (npm packages, or Claude Code plugins/marketplaces from git)

Positionals:
  action  subcommand (add, list, remove) or npm module name                                 [string]
  target  git URL or marketplace repository (for add), or plugin name (for remove)          [string]
  extra   plugin name within marketplace (for add)                                          [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --name        folder name to install under (add); defaults to the plugin name         [string]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi db --help 1`] = `
"yukioshi db

database tools

Commands:
  yukioshi db [query]     open an interactive sqlite3 shell or run a query                 [default]
  yukioshi db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi trust --help 1`] = `
"yukioshi trust [directory]

allow this project to run its own hooks, plugins, and commands

Positionals:
  directory  project directory (defaults to the current directory)                          [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --revoke      remove previously granted project trust               [boolean] [default: false]
      --status      show whether the project is trusted without changing it
                                                                          [boolean] [default: false]

Examples:
  yukioshi trust .         trust the project in the current folder
  yukioshi trust --status  check whether it is trusted"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi checkpoint --help 1`] = `
"yukioshi checkpoint <action> [id]

list, inspect, restore, or prune durable git checkpoints

Positionals:
  action  list checkpoints, show or restore one by id, or prune old ones
                                            [required] [choices: "list", "show", "restore", "prune"]
  id      checkpoint commit id (for show or restore)                                        [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --session     limit list to a session id                                              [string]
      --yes         confirm restoring over unsaved changes                [boolean] [default: false]
      --older-than  prune refs older than this age (30d, 12h or 90m)       [string] [default: "30d"]

Examples:
  yukioshi checkpoint list                  list checkpoints for this project
  yukioshi checkpoint restore 1a2b3c4d5e6f  put the files back as they were at that checkpoint"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi schedule --help 1`] = `
"yukioshi schedule

manage scheduled tasks and recurring runs

Commands:
  yukioshi schedule add <cron> <prompt>  schedule a prompt to run on a recurring cron schedule
  yukioshi schedule list                 list all scheduled jobs
  yukioshi schedule remove <id>          remove a scheduled job
  yukioshi schedule run <id>             run a scheduled job immediately
  yukioshi schedule logs <id>            view logs of past runs for a scheduled job
  yukioshi schedule enable <id>          enable a scheduled job
  yukioshi schedule disable <id>         disable a scheduled job

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi skill --help 1`] = `
"yukioshi skill <action> [target]

install, list, or remove skills from git repositories

Positionals:
  action  add a skill repository, list installed ones, or remove one
                                                       [required] [choices: "add", "list", "remove"]
  target  git URL (add) or installed name (remove)                                          [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --name        folder name to install under (add); defaults to the repository name     [string]

Examples:
  yukioshi skill add                                  install the skills in a git repository
  https://github.com/owner/skills-repo"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi worktree --help 1`] = `
"yukioshi worktree <action> [name]

create, list, locate, or remove git worktrees for parallel sessions

Positionals:
  action  create a worktree, list them, print one's path, or remove one
                                               [required] [choices: "new", "list", "path", "remove"]
  name    worktree name                                                                     [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --yes         remove even with uncommitted changes                  [boolean] [default: false]

Examples:
  yukioshi worktree new fix-login           create a worktree to work on in parallel
  cd "$(yukioshi worktree path fix-login)"  go to it"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi mcp list --help 1`] = `
"yukioshi mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi mcp add --help 1`] = `
"yukioshi mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]

Examples:
  yukioshi mcp add docs --url                         add a remote server without prompts
  https://example.com/mcp
  yukioshi mcp add files -- npx -y some-mcp-server    add a local server: its start command goes
                                                      after --"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi mcp auth --help 1`] = `
"yukioshi mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  yukioshi mcp auth list  list OAuth-capable MCP servers and their auth status         [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi mcp logout --help 1`] = `
"yukioshi mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi providers list --help 1`] = `
"yukioshi providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi providers login --help 1`] = `
"yukioshi providers login [url]

log in to a provider

Positionals:
  url  address of a server that publishes its sign-in command; leave empty to pick a provider from
       the list                                                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi providers logout --help 1`] = `
"yukioshi providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi agent create --help 1`] = `
"yukioshi agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi agent list --help 1`] = `
"yukioshi agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi session list --help 1`] = `
"yukioshi session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi session delete --help 1`] = `
"yukioshi session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi db path --help 1`] = `
"yukioshi db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi schedule add --help 1`] = `
"yukioshi schedule add <cron> <prompt>

schedule a prompt to run on a recurring cron schedule

Positionals:
  cron    5-field cron expression in local time: minute hour day-of-month month day-of-week
                                                                                 [string] [required]
  prompt  prompt to execute on schedule                                          [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --name        display name for the scheduled task                                     [string]
      --dir         target directory for task execution (defaults to current directory)     [string]
      --model       model to execute the prompt with (provider/model)                       [string]
      --agent       agent mode to execute with                                              [string]
      --auto        automatically approve permission requests during runs [boolean] [default: false]
      --review      have a small model approve or refuse each action that is not low-risk
                    (permission mode review)                              [boolean] [default: false]

Examples:
  yukioshi schedule add "0 9 * * 1-5" "summarize      every weekday at 09:00
  recent commits"
  yukioshi schedule add "*/30 * * * *" "check the     every 30 minutes in a given folder
  build" --dir ~/code/app"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi schedule list --help 1`] = `
"yukioshi schedule list

list all scheduled jobs

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi schedule remove --help 1`] = `
"yukioshi schedule remove <id>

remove a scheduled job

Positionals:
  id  id of the job to remove                                                    [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi schedule run --help 1`] = `
"yukioshi schedule run <id>

run a scheduled job immediately

Positionals:
  id  id of the job to run                                                       [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi schedule logs --help 1`] = `
"yukioshi schedule logs <id>

view logs of past runs for a scheduled job

Positionals:
  id  id of the job                                                              [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --last        show only the output of the most recent run           [boolean] [default: false]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi schedule enable --help 1`] = `
"yukioshi schedule enable <id>

enable a scheduled job

Positionals:
  id  id of the job to enable                                                    [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`yukioshi CLI help-text snapshots every documented command emits stable help text: yukioshi schedule disable --help 1`] = `
"yukioshi schedule disable <id>

disable a scheduled job

Positionals:
  id  id of the job to disable                                                   [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
